	  - New paranoid options: paranoid_lava and paranoid_water, asks for
	      confirmation before walking into known lava and water squares
	  - Automatically ask whether to unlock when #looting a locked container
	      and carrying an unlocking tool (from UnNetHackPlus)
	  - Show remaining memory in spellcasting menu as percentage (from AceHack)

	* bug fixes:
	  - Fixed crash when player gets killed when entering a new level and
	    a trap on the previous level causes a null pointer dereference
	    when writing the HTML map (related to C343-20).
	  - Really reduce occurrences of hint daemon to once per game
	  - Fixed crash with ray beams at edges of maps
	  - Fixed missing item name with traditional menustyle
	  - Disabled chromatic dragon generation by monster summoning
	  - Fixed sporadic crash with hitpointbar when hp was below 0
	  - Clear dungeon overview info for bones files (reported by Christian
	    Stegen)
	  - Fixed crash when destroying bag of holding containing gold pieces
	  - Fixed gold not merging in containers after container has been BUC
	    tested on altars
	  - Empty bag of tricks don't get destroyed by wands of cancellation

	* vanilla bug fixes:
	  - Prevent the Book of the Dead from being destroyed when the
	    player falls into lava. (from GruntHack)
	  - Fix security bug in options handler (reported by Matthew Daley,
	    fixed by Pasi Kallinen)
	  - Honor pickup_burden when picking up gold.
	  - Fix TTY crashing when a location has more than 32k items (from NAO)
	  - Correct article when choking on named artifacts
	  - C343-8: Plural of Nazgul is Nazgul, not Nazguls
	  - C343-175: Chatting to prisoners may give an inappropriate message
	    (from UnNetHackPlus, thanks to Reddit user Nuclear_Winterfell)

2012-04-01  UnNetHack 4.0.0
	* Uncursed and blessed scrolls of magic mapping reveal secret doors
	* Blessed scrolls of magic mapping reveal objects
	* Dump log: show same information on final dump as wizard mode