@@ -67,6 +67,8 @@
 	  - Automatically ask whether to unlock when #looting a locked container
 	      and carrying an unlocking tool (from UnNetHackPlus)
 	  - Show remaining memory in spellcasting menu as percentage (from AceHack)
+	  - Applying a spellbook allows the player to flip through the pages,
+	      providing an indication of how many reads it has left.
 
 	* bug fixes:
 	  - Fixed crash when player gets killed when entering a new level and
